--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Random spot on the web for my random learnings
+title: Learnings dump 
 email: nyc@yuchengng.com
 description: >- # this means to ignore newlines until "baseurl:"
   Random spot on the web for my random learnings.
