--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ github_username:  lucasnyc
 theme: minima
 plugins:
   - jekyll-feed
+minima:
+  skin: dark
 
 # Exclude from processing.
 # The following items will not be processed, by default.
