--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,9 @@ github_username:  lucasnyc
 
 # Build settings
 theme: minima
+remote-theme: pages-themes/hacker@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
 minima:
   skin: dark
