--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ url: "https://lucasnyc.github.io/" # the base hostname & protocol for your site,
 github_username:  lucasnyc
 
 # Build settings
-theme: minima
+# theme: minima
 remote-theme: pages-themes/hacker@v0.2.0
 plugins:
   - jekyll-remote-theme
-  - jekyll-feed
+  # - jekyll-feed
 minima:
   skin: dark
 
