--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ github_username:  lucasnyc
 
 # Build settings
 # theme: minima
-remote-theme: pages-themes/hacker@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-remote-theme # https://www.rubydoc.info/gems/jekyll-theme-hacker/0.2.0
   - jekyll-feed
+  - jekyll-remote-theme # https://www.rubydoc.info/gems/jekyll-theme-hacker/0.2.0
 minima:
   skin: dark
 
