--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Learnings dump 
+title: learnings_dump 
 email: nyc@yuchengng.com
 description: >- # this means to ignore newlines until "baseurl:"
   Random spot on the web for my random learnings.
-  Do email me if you noticed details of my posts to be incrorect.
+  Do email me if you spot any incrorect details. :)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yuchengng.com" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  lucasnyc
